--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-intl": "^4.7.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "swiper": "^12.0.3"
+    "swiper": "^12.0.3",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
