--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "framer-motion": "^12.29.2",
     "leaflet": "^1.9.4",
     "next": "16.1.4",
