--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.9.4",
     "next": "16.1.4",
     "next-intl": "^4.7.0",
+    "nextjs-toploader": "^3.9.17",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-leaflet": "^5.0.0",
