--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.4",
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.29.2",
     "leaflet": "^1.9.4",
     "next": "16.1.4",
