--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.4",
     "dompurify": "^3.3.1",
     "framer-motion": "^12.29.2",
+    "isomorphic-dompurify": "^2.36.0",
     "leaflet": "^1.9.4",
     "next": "16.1.4",
     "next-intl": "^4.7.0",
